k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop-ingress
spec:
  rules:
    - host: masterjoy.top
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: shop-service
                port:
                  number: 80
    - host: www.masterjoy.top
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: shop-service
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: shop-service
spec:
  selector:
    app: shop
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop
  template:
    metadata:
      name: shop
      labels:
        app: shop
    spec:
      imagePullSecrets:
        - name: private-docker
      containers:
        - name: shop
          image: registry.cn-hangzhou.aliyuncs.com/tanwuyang/shop-template:v2021_05_14_09_04
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/sites-available/default
              subPath: default
              name: shop-config
            - mountPath: /application/public/uploads/
              name: alicloud-nas
          lifecycle:
            postStart:
              exec:
                command:
                  - sh
                  - -c
                  - "/etc/init.d/nginx start"
      volumes:
        - name: shop-config
          configMap:
            name: shop-config
        - name: alicloud-nas
          flexVolume:
            driver: alicloud/nas
            options:
              server: id-shenzhen.nas.aliyuncs.com
              path: /shop-template
              vers: "3"
              options: nolock,tcp,noresvport
